fixed OAuth read roles from OIDC